fix: fixes shifting of background images

--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -15,7 +15,7 @@
   }
 
   &__background {
-    position: absolute;
+    position: absolute !important; // overwrites "gatsby-image-wrapper" {position: relative} by default
     top: 0;
     left: 0;
     width: 100%;
